footer adjusted on all pages

--- a/pages/services.html
+++ b/pages/services.html
@@ -481,86 +481,94 @@
         </div>
       </div>
     </section>
+ <!-- Footer Section---- -->
+ <footer
+ class="footer-section"
+ data-aos="fade-down"
+ data-aos-easing="ease-in-sine"
+ data-aos-anchor-placement="top-bottom"
+ data-aos-duration="1000"
+>
+ <div class="container">
+   <!-- Logo -->
+   <div class="row">
+     <div class="col-12">
+       <a href="/index.html">
+         <img
+           src="/assets/images/new-logo.png"
+           alt="Wealth Living Healthcare"
+           class="footer-logo"
+       /></a>
+     </div>
+   </div>
 
-    <!-- Footer Section---- -->
-    <footer
-      class="footer-section"
-      data-aos="fade-down"
-      data-aos-easing="ease-in-sine"
-      data-aos-anchor-placement="top-bottom"
-      data-aos-duration="1000"
-    >
-      <div class="container">
-        <!-- Logo -->
-        <div class="row">
-          <div class="col-12">
-            <a href="/index.html">
-              <img
-                src="/assets/images/new-logo.png"
-                alt="Wealth Living Healthcare"
-                class="footer-logo"
-            /></a>
-          </div>
-        </div>
+   <!-- First Section: About Content -->
+   <div class="row">
+     <div class="col-md-12">
+       <p class="footer-about">
+         Wealth Living Healthcare is committed to providing top-tier
+         medical services, ensuring the best patient care with a blend of
+         innovation and compassion.
+       </p>
+     </div>
+   </div>
 
-        <!-- First Section: About Content -->
-        <div class="row">
-          <div class="col-md-12">
-            <p class="footer-about">
-              Wealth Living Healthcare is committed to providing top-tier
-              medical services, ensuring the best patient care with a blend of
-              innovation and compassion.
-            </p>
-          </div>
-        </div>
-
-           <!-- Second Section: Email & Phone -->
+  <!-- Second Section: Email & Phone -->
 <div class="row contact-info">
-  <div class="col-md-12 mb-3">
-    <div class="contact-item">
-      <i class="fas fa-envelope"></i>
-      <a href="mailto:info@welihealthcare.com" class="text-white">
-        info@welihealthcare.com
-      </a>
-    </div>
-  </div>
-  <div class="col-md-6">
-    <div class="contact-item">
-      <i class="fas fa-phone-alt"></i>
-      <a href="tel:+13462191008" class="text-white">+13462191008</a>
-    </div>
-  </div>
+<div class="col-md-12 mb-3">
+<div class="contact-item">
+ <i class="fas fa-envelope"></i>
+ <a href="mailto:info@welihealthcare.com" class="text-white">
+   info@welihealthcare.com
+ </a>
 </div>
-
-        <!-- Third Section: Address & Social Media -->
-        <div class="row">
-          <div class="col-md-6 text-start">
-            <div class="address">
-              <i class="fas fa-map-marker-alt"></i>
-              <p>3007 Stephen Howard court, Missouri city TX 77459</p>
-            </div>
-          </div>
-          <div class="col-md-6 text-md-end text-center">
-            <div class="social-icons">
-              <a href="https://www.facebook.com/share/1A7nFQeMjf/"
-                ><i class="fab fa-facebook-f"></i
-              ></a>
-              <a href="https://Wa.me/13462191008"
-                ><i class="bx bxl-whatsapp"></i
-              ></a>
-              <a
-                href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"
-                ><i class="fab fa-instagram"></i
-              ></a>
-              <a href="http://tiktok.com/@wealthyliving.hea"
-                ><i class="bx bxl-tiktok"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </footer>
-
+</div>
+<div class="col-md-6">
+<div class="contact-item">
+ <i class="fas fa-phone-alt"></i>
+ <a href="tel:+13462191008" class="text-white">+13462191008</a>
+</div>
+</div>
+</div>
+   <!-- Third Section: Address & Social Media -->
+   <div class="row">
+     <div class="col-md-6 text-start">
+       <div class="address">
+         <i class="fas fa-map-marker-alt"></i>
+         <p>3007 Stephen Howard court, Missouri city TX 77459</p>
+       </div>
+     </div>
+     <div class="col-md-6 text-md-end text-center">
+       <div class="social-icons">
+         <a href="https://www.facebook.com/share/1A7nFQeMjf/"
+           ><i class="fab fa-facebook-f"></i
+         ></a>
+         <a href="https://Wa.me/13462191008"
+           ><i class="bx bxl-whatsapp"></i
+         ></a>
+         <a
+           href="https://www.instagram.com/wealthy_living_healthcare?igsh=dnJobXlpam1iZWMz"
+           ><i class="fab fa-instagram"></i
+         ></a>
+         <a href="http://tiktok.com/@wealthyliving.hea"
+           ><i class="bx bxl-tiktok"></i
+         ></a>
+       </div>
+     </div>
+   </div>
+ </div>
+</footer>
+<div class="floating-buttons-container">
+ <!-- Back to Top Button -->
+ <button class="floating-btn back-to-top" aria-label="Back to Top">
+   <i class="fas fa-arrow-up"></i>
+ </button>
+ 
+ <!-- WhatsApp Button -->
+ <a href="https://wa.me/13462191008" class="floating-btn whatsapp-btn" target="_blank" aria-label="Chat on WhatsApp">
+   <i class="bx bxl-whatsapp"></i>
+ </a>
+</div>
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
