--- a/pages/contact.html
+++ b/pages/contact.html
@@ -311,24 +311,23 @@
           </div>
         </div>
 
-        <!-- Second Section: Email & Phone -->
-        <div class="row contact-info">
-          <div class="col-md-12 mb-3">
-            <div class="contact-item">
-              <i class="fas fa-envelope"></i>
-              <a href="info@welihealthcare.comm" class="text-white"
-                >info@welihealthcare.com</a
-              >
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="contact-item">
-              <i class="fas fa-phone-alt"></i>
-              <a href="+13462191008" class="text-white">+13462191008</a>
-            </div>
-          </div>
-        </div>
-
+       <!-- Second Section: Email & Phone -->
+<div class="row contact-info">
+  <div class="col-md-12 mb-3">
+    <div class="contact-item">
+      <i class="fas fa-envelope"></i>
+      <a href="mailto:info@welihealthcare.com" class="text-white">
+        info@welihealthcare.com
+      </a>
+    </div>
+  </div>
+  <div class="col-md-6">
+    <div class="contact-item">
+      <i class="fas fa-phone-alt"></i>
+      <a href="tel:+13462191008" class="text-white">+13462191008</a>
+    </div>
+  </div>
+</div>
         <!-- Third Section: Address & Social Media -->
         <div class="row">
           <div class="col-md-6 text-start">
@@ -357,6 +356,17 @@
         </div>
       </div>
     </footer>
+    <div class="floating-buttons-container">
+      <!-- Back to Top Button -->
+      <button class="floating-btn back-to-top" aria-label="Back to Top">
+        <i class="fas fa-arrow-up"></i>
+      </button>
+      
+      <!-- WhatsApp Button -->
+      <a href="https://wa.me/13462191008" class="floating-btn whatsapp-btn" target="_blank" aria-label="Chat on WhatsApp">
+        <i class="bx bxl-whatsapp"></i>
+      </a>
+    </div>
 
     <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
     <script src="/assets/js/script.js"></script>
